FreedomSanboxAntDeploy/src/objects/Order_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Details</relationshipLabel>
        <relationshipName>Order_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Balance_Amount__c</fullName>
        <formula>Payable_Amount__c  -  Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payable_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Order Detail</label>
    <nameField>
        <displayFormat>OD-{00000}</displayFormat>
        <label>Order Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I200000007X3zEAE_00NW0000000hw7zMAA</fullName>
        <active>true</active>
        <field>Cheque_Details__c.Order_Detail__c</field>
        <filterItems>
            <field>Order_Detail__c.Account__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Cheque Details_Order Detail</name>
        <sourceObject>Cheque_Details__c</sourceObject>
    </namedFilters>
    <pluralLabel>Order Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>